# Options for boost
if(WIN32)
    set(Boost_USE_STATIC_LIBS ON)
endif(WIN32)

option(Boost_DEBUG "Set to ON to enable debug output from FindBoost." OFF)
option(Boost_DETAILED_FAILURE_MSG "Set to ON to get detailed information" OFF)
set(target Banking)
file(GLOB sources CONFIGURE_DEPENDS "*.hpp" "*.cpp")
find_package(Boost 1.65.1 COMPONENTS REQUIRED date_time)
if(Boost_FOUND)
    add_executable(${target} ${sources})
    add_library(${target}_lib STATIC ${sources})
    target_include_directories(${target} PUBLIC ${PROJECT_SOURCE_DIR}/include)
    target_link_libraries(${target} ${Boost_LIBRARIES})    
endif()
